取得するTupleのペアをMongoに保存、Kimonoのエラーを処理

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,6 +13,8 @@ block content
         input#tupleName(type='text',name='tupleName')
       p
         input(type='submit', value="add tuple")
+      p
+        input#remove(type='button', value='remove')
   // 一覧を表示
   .list
 
